Fixed overflow bug in modal popup

--- a/static/stylesheets/csmodify.css
+++ b/static/stylesheets/csmodify.css
@@ -361,7 +361,6 @@ td > a {
     padding: 10px 20px 10px;
     border: 1px solid #888;
     width: 60%;
-    height: 50%;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
